# ircppbot-znc

./: .gitignore  Makefile.am  README  ZncCommands.sql  addusertext.txt.example  conf.ini.example  configure.ac  example.conf  makefile
ZncModule/: ircppbot.cpp
m4/: ax_cxx_compile_stdcxx_11.m4
man/: Makefile.am  zncbot
mysql/: binds.sql
src/: Makefile.am  Znc.cpp  zncbot.cpp
src/include/: Znc.h  zncbot.h
